<resources>
    <string name="app_name">HOSPITAPP</string>
    <string name="title_home">HOME</string>
    <string name="title_dashboard">LINKED</string>
    <string name="title_proveedores">PROVIDERS</string>
    <string name="title_notifications">PROFILE</string>
    <string name="respiradores">RESPIRATORS</string>
    <string name="mascarillas">MASKS</string>
    <string name="numero_de_unidades">NUs</string>
    <string name="selecione_su_pedido">Select your order:</string>
    <string name="abrir_calendario">Open calendar</string>
    <string name="seleccionar_un_dia">Select a day</string>
    <string name="nombre">Object</string>
    <string name="referenceid">Reference:</string>
    <string name="num_unidades">Number of units:</string>
    <string name="mantener_direccion_de_envio">Keep shipping address?</string>
    <string name="si_eligiste_no_indica_la_nueva">If you chose no, please indicate the new direction:</string>
    <string name="material">Material</string>
    <string name="numero">nº</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_now">Register now</string>
    <string name="iniciar_sesion">Log in</string>
    <string name="email">Email:</string>
    <string name="password">Password</string>
    <string name="pass">Password</string>
    <string name="nombre_proveedor">Provider</string>
    <string name="nombre_empresa">Company</string>
    <string name="id">ID</string>
    <string name="usuario">User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enlazar">Link</string>
    <string name="add_a_material_if_you_don_t_find_it_in_the_list_below">Add a material if you don\'t find it in the list below</string>
    <string name="name">Name</string>
    <string name="nombre_de_hospital">Hospital name:</string>
    <string name="c_digo_postal">Postal code:</string>
    <string name="nameProfileInfo">Name</string>
    <string name="nameProfilePrompt">Name:</string>
    <string name="hospitalProfilePrompt">Hospital name:</string>
    <string name="hospitalProfileInfo">Hospital name</string>
    <string name="streetProfilePrompt">Hospital address:</string>
    <string name="streetProfileInfo">Hospital address</string>
    <string name="CPProfilePrompt">Postal code:</string>
    <string name="CPProfileInfo">Postal code</string>
    <string name="numberProfilePrompt">Number:</string>
    <string name="numberProfileInfo">Number</string>
    <string name="cityProfilePrompt">City or region:</string>
    <string name="cityProfileInfo">City or region</string>
    <string name="emailProfilePrompt">Email:</string>
    <string name="emailProfileInfo">Email</string>
    <string name="telephoneProfilePrompt">Telephone:</string>
    <string name="telephoneProfileInfo">Telephone</string>
    <string name="logOutButtonStr">Log Out</string>
    <string name="profileTitle">User Profile</string>
    <string name="profileEditTitle">Edit User Profile</string>
    <string name="hospitalEditProfilePrompt">Hospital name:</string>
    <string name="hospitalEditProfileInfo">Introduce the hospital name</string>
    <string name="streetEditProfilePrompt">Hospital address:</string>
    <string name="streetEditProfileInfo">Introduce hospital address</string>
    <string name="CPEditProfilePrompt">Postal code:</string>
    <string name="CPEditProfileInfo">Postal code</string>
    <string name="numberEditProfilePrompt">Number:</string>
    <string name="numberEditProfileInfo">Number</string>
    <string name="cityEditProfilePrompt">City or region:</string>
    <string name="cityEditProfileInfo">City or region</string>
    <string name="emailEditProfileInfo">Introduce your email</string>
    <string name="emailEditProfilePrompt">Email:</string>
    <string name="telephoneEditProfileInfo">Introduce your telephone number</string>
    <string name="telephoneEditProfilePrompt">Telephone:</string>
    <string name="saveProfileBtn">Save profile</string>
    <string name="helpTitle">Help</string>
    <string name="state">State</string>
    <string name="date">Date</string>
    <string name="unities">Units:</string>
    <string name="helpToMainBtn">Back to Home</string>
    <string name="navBtnTitle">NAVIGATION BUTTON</string>
    <string name="homeTitle">HOME</string>
    <string name="linkedTitle">LINKED</string>
    <string name="helpProfileTitle">PROFILE</string>
    <string name="received">Received</string>
    <string name="itemProviderListProvider">Provider</string>
    <string name="particularName">Name</string>
    <string name="materialName">Name</string>
    <string name="userRegister">Register</string>
    <string name="userPrompt">User:</string>
    <string name="registerPassword">Password:</string>
    <string name="userHintRegister">Username</string>
    <string name="passwordFirstRegister">Enter your new password</string>
    <string name="passwordSecondRegister">Repeat your new password</string>
    <string name="emailRegisterPrompt">Email:</string>
    <string name="addressRegister">Address:</string>
    <string name="telephoneRegisterPrompt">Telephone:</string>
    <string name="cityRegisterHint">City or region</string>
    <string name="postalRegisterHint">Postal code</string>
    <string name="numberRegisterHint">Number</string>
    <string name="addressRegisterHint">Hospital\'s address</string>
    <string name="nameRegisterHint">Hospital name</string>
    <string name="signinRegisterBtn">Sign in</string>
    <string name="registerProfileRegisterBtn">Register profile</string>
    <string name="mark_as_received">Mark as Received</string>
    <string name="id_text">ID</string>
    <string name="spinnerTitle">Material</string>

</resources>
