<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <RelativeLayout
        android:id="@+id/select_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:id="@+id/select_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selecione_su_pedido"
            android:textSize="16sp"
            />

    </RelativeLayout>


    <LinearLayout

        android:id="@+id/botones_pedidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_text_layout"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        >

        <Button
            android:id="@+id/mascarillas_button"
            android:layout_width="130dp"
            android:layout_height="36dp"
            android:text="@string/mascarillas"
            >

        </Button>

        <Button
            android:id="@+id/respiradores_button"
            android:layout_width="130dp"
            android:layout_height="36dp"
            android:layout_marginLeft="20dp"
            android:text="@string/respiradores">

        </Button>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botones_pedidos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/numero_de_unidades" />




    </RelativeLayout>





</RelativeLayout>