<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:id="@+id/ObjectNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/ObjectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:layout_marginLeft="40dp"
            android:textSize="20sp"
            >

        </TextView>

        <TextView
            android:id="@+id/State"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Estado"
            android:textSize="16sp"

            android:layout_marginLeft="50dp"
            >

        </TextView>

        <TextView
            android:id="@+id/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fecha"
            android:textSize="16sp"

            android:layout_marginLeft="30dp"
            >

        </TextView>

        <TextView
            android:id="@+id/fechaNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fecha"
            android:textSize="16sp"

            android:layout_marginLeft="10dp"
            >

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/VolumeNumberLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ObjectNameLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/textVN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Unidades:"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            >

        </TextView>

        <TextView
            android:id="@+id/VolumeNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_de_unidades"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:layout_marginRight="50dp"
            >

        </TextView>

        <TextView
            android:id="@+id/ReferenceIdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/referenceid"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            >

        </TextView>

        <TextView
            android:id="@+id/ReferenceIdNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            >

        </TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/VolumeNumberLayout"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            >

        </TextView>

    </LinearLayout>



</RelativeLayout>