<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:paddingLeft="30dp"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal"

    >


    <LinearLayout
        android:id="@+id/ParticularNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:id="@+id/ParticularName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_proveedor"
            android:layout_marginLeft="40dp"
            android:textSize="16sp"
            >

        </TextView>

        <TextView
            android:id="@+id/EnterpriseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_empresa"
            android:textSize="16sp"

            android:layout_marginLeft="50dp"
            >

        </TextView>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/VolumeNumberLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ObjectNameLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        >

        <TextView
            android:id="@+id/ProveedorEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:layout_marginRight="50dp"
            >

        </TextView>

        <CheckBox
            android:id="@+id/ButtonAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="Aceptar?"
            android:textSize="16sp">

        </CheckBox>

    </LinearLayout>

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/VolumeNumberLayout"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            >

        </TextView>

    </LinearLayout>
    -->


</RelativeLayout>